--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "postcss-custom-media": "^6.0.0",
     "postcss-custom-properties": "^7.0.0",
     "postcss-import": "^11.1.0",
-    "purify-css": "^1.2.5"
+    "purify-css": "^1.2.5",
+    "vercel": "^20.1.2"
   }
 }
